tests/fixtures/invalid/min_dict_dict.py
# Cannot call min() with Dict[str, int], Dict[str, int]
x = min({"a": 1}, {"a": 1})
